# spinflip

./: .gitignore  CLAUDE.md  NOTICE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/radio_telescope/: capture.py  capture_core.py  config.toml  gui.py  observe.py  sdr_compat.py  viewer.py
tests/: conftest.py  test_capture_core.py  test_sdr_compat.py  test_viewer.py
